--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,6 @@ jobs:
            git config --global user.name ${GITHUB_ACTOR}
            git config --global user.email ${{ secrets.USER_EMAIL }}
            git commit --allow-empty -m "Plant grass: `date +'%Y-%m-%d %H:%M:%S'`" 
-           git push origin master
+           
+           git push origin master --force
+           
