--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run commit script
         run: |
            git config --global user.name ${GITHUB_ACTOR}
-           git config --global user.email ${{ secrets.USER_EMAIL }}
+           git config --global user.email "suraaj.sinngh@gmail.com"
            git commit --allow-empty -m "Plant grass: `date +'%Y-%m-%d %H:%M:%S'`" 
            
            git push origin master --force
